<resources>
    <string name="app_name">Braille în text</string>
    <string name="todo">TODO</string>
    <string name="translated_words_will_appear_here">Traducerea va apărea aici</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_translate">Traducere</string>
    <string name="title_history">Istoric</string>
    <string name="title_feedback">Feedback</string>
    <string name="translate_your_photo">Tradu o imagine</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="galerie">Galerie</string>
    <string name="camera_foto">Camera foto</string>
    <string name="alege_sursa_de_preluare_a_imaginii">Alege sursa de preluare a imaginii</string>
    <string name="nume">Nume</string>
    <string name="las_ne_feedback_ne_mbun_t_e_ti">Lasă-ne feedback, ne îmbunătățești :)</string>
    <string name="begin_translating">Begin translating</string>
</resources>
