<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/uploadBtn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/translate_your_photo"
            android:textColor="@color/my_app_primary_variant_color"
            app:icon="@drawable/ic_add_24dp"
            app:iconGravity="textStart"
            app:iconSize="20dp"
            app:iconTint="@color/my_app_primary_variant_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/my_app_primary_variant_color"
            app:strokeWidth="1dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_translate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/translated_words_will_appear_here"
            android:textColorHint="@color/secondary_text"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/uploadBtn" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/imageview_styling"
            android:contentDescription="@string/todo"
            android:theme="@style/Theme.AppCompat.DayNight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_translate" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        layout="@layout/item_bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom" />

</FrameLayout>